--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Galada&family=Lato:wght@300&display=swap');
+
 * {
     margin: 0;
     font-family: 'Lato', sans-serif;
@@ -18,11 +20,46 @@ body {
     color: #f2f2f2;
     font-weight: 900;
     font-size: 50px;
-    margin: 5px 0 -25px 15px;
+    margin: 15px 0 -5px 15px;
+}
+
+.academlo{
+    width: 35%;
+    float: right;
+}
+
+.ava {
+    width: 100%;
+    border-radius: 50%;
+    border-bottom: 3px solid #203040;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    margin-bottom: 10px;
+}
+
+.name {
+    font-weight: 800;
+    font-size: 18px;
+    text-align: center;
+}
+
+.subname {
+    font-weight: 300;
+    font-size: 15px;
+    text-align: center;
+}
+
+.sublogo {
+    font-family: 'Galada', cursive;
+    color: #203040;
+    font-weight: 900;
+    font-size: 50px;
+    margin: 0 0 -5px 15px;
 }
 
 .container-full {
     background-color: #cbcbcb;
+    padding: 10px 0;
+    margin-bottom: 20px;
 }
 
 .styles-grid {
@@ -39,9 +76,11 @@ body {
     margin: 15px 8px;
 }
 
-.hover{
-    transition: .2s all;
+.hover {
+    margin: 8px;
+    transition: .3s all;
 }
+
 .styles-grid:hover .hover {
     filter: blur(3px);
     opacity: .5;
@@ -53,19 +92,9 @@ body {
     transform: scale(1);
     filter: blur(0px);
     opacity: 1;
-    box-shadow: 0 8px 20px 0px rgba(0, 0, 0, 0.125);
 }
 
-
-.ava {
-    width: 100%;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    border-bottom: 2px solid #ddd;
-    margin-bottom: 15px;
-}
-
-.card-foto {
+.card-pic {
     width: 100%;
     height: 100%;
     border-radius: 5px;
@@ -73,34 +102,29 @@ body {
     border-bottom: 1px solid #05e0fc;
 }
 
-.margen-foto {
-    margin: 8px;
+.logostech {
+    width: 100%;
 }
 
-.centro {
-    text-align: center;
-}
-
-.titulo {
-    font-weight: 600;
-    font-size: 20px;
-    padding: 0 10px;
-}
-
-.contenido {
+.content {
     font-weight: 300;
-    font-size: 16px;
+    font-size: 18px;
     padding: 10px;
     text-align: justify;
-    line-height: 25px;
+    line-height: 30px;
 }
 
-.nombre {
-    font-weight: 600;
-    font-size: 23px;
-}
-
-.subnombre {
+.title {
+    font-family: 'Galada', cursive;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 22px;
+}
+
+.footer {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 25px 0;
+    text-align: center;
 }
